# mlgear

./: .gitignore  CHANGES.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
mlgear/: __init__.py  aggregators.py  cv.py  encoders.py  lr_scheduler.py  metrics.py  models.py  tracker.py  utils.py
mlgear.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_aggregators.py  test_cv.py  test_encoders.py  test_metrics.py  test_models.py  test_tracker.py  test_utils.py
